# DeepSeek-FT

./: .gitignore  README.md  pyproject.toml
configs/: default.json
docs/: autodl_gpu_runbook.md  matrix_benchmark_runbook.md
manuscript/: deepseekcell_ft_article.md
scripts/: bundle_label_overlap_results_autodl.sh  export_h5ad_for_singler.py  official_sctype_cluster_baseline.R  package_for_autodl.ps1  prepare_baron_pancreas_h5ad.py  prepare_pbmc3k_tutorial_h5ad.py  prepare_zeisel_brain_h5ad.py  render_experiment_figures.py  render_supplementary_analysis.py  run_baron_pancreas_full_comparison.ps1  run_baron_pancreas_full_comparison.sh  run_baron_pancreas_matrix_benchmark.ps1  run_baron_pancreas_matrix_benchmark.sh  run_curation_priority.ps1  run_example_pipeline.ps1  run_experiment_summary.ps1  run_finetune_preflight.ps1  run_label_overlap_pipeline.ps1  run_lora_training.ps1  run_lora_training.sh  run_matrix_marker_benchmark.ps1  run_matrix_marker_benchmark.sh  run_matrix_sctype_baselines.sh  run_matrix_singler_baselines.sh  run_noise_grid_autodl.sh  run_paired_statistical_tests.py  run_panglaodb_cl_pipeline.ps1  run_pbmc3k_full_comparison.ps1  run_pbmc3k_full_comparison.sh  run_pbmc3k_matrix_benchmark.ps1  run_pbmc3k_matrix_benchmark.sh  run_prompt_baselines_autodl.sh  run_reviewed_curation_pipeline.ps1  run_zeisel_brain_full_comparison.ps1  run_zeisel_brain_full_comparison.sh  run_zeisel_brain_matrix_benchmark.ps1  run_zeisel_brain_matrix_benchmark.sh  setup_sctype_conda_autodl.sh  setup_singler_conda_autodl.sh  singler_cluster_baseline.R  (+1 more)
tests/: test_annotation.py  (+11 more)
(+24 files in other folders)
