[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseekcell-ft"
version = "0.1.0"
description = "Fine-tuning LLMs for automated cell type annotation from marker genes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "DeepSeekCell-FT contributors" }
]
dependencies = []

[project.optional-dependencies]
train = [
  "accelerate>=1.14,<2",
  "datasets>=5,<6",
  "peft>=0.19,<1",
  "torch>=2.2",
  "transformers>=4.57,<5",
  "trl>=1.6,<2"
]
single-cell = [
  "anndata>=0.10",
  "pandas>=2.2",
  "scanpy>=1.10"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
deepseekcell-ft = "deepseekcell_ft.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
